2001-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct.matrix: Implemented FR #481022.

2001-11-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc: Added IRC example to examples section. Patch #481479.

	* struct/graph: Applied patch #483125
	
	* smtpd: Example consolidation: Moved the smtpd example to
	  'examples' directory.

	* ftp: Implemented FR #481161.

	* ftpd: Added example ftp server used for testing the
	  functionality of FR #481161.

2001-11-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* smtpd: New module.

2001-11-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* csv: Applied patch #482570.

	* comm: Fixed bug #480227.

	* ftp, uri: Implemented FR #476804.

	* ftp: Applied patch #428053.

2001-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* irc: New module. Internet protocol handling. Internet Relay Chat
	  (IRC). Author David N. Welton <davidw@dedasys.com>.

	* examples/nntp: Moved example applications out of the nntp module
	  into the example space.

	* examples/ftpd: Moved example applications out of the ftpd module
	  into the example space.

	* examples/ftp: Moved example applications out of the ftp module
	  into the example space.

	* csv: Implemented FR #481023.

	* textutil: Added 'expander' code by William H. Duquette
	  <will@wjduquette.com>. Added option -strictlength to
	  adjust. Code by Dan Kuchler <dan@kuchler.net>.

2001-11-09  Joe English  <jenglish@users.sourceforge.net>

	* comm: Replaced nroff macro trickery in comm.n manpage.

2001-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime: Fixed bug #479174.

	* mkInstallScripts.tcl: Added code to install tclIndex files.

	* Makefile.in (install-libraries, dist): Added commands to copy
	  'tclIndex' files into installation and distribution. This fixes
	  the remainder of #475846.
	  (dist): Fixed error in generation of tar/zip files too.
