@@ -1,3 +1,8 @@
+2001-11-28  Reinhard Max  <max@suse.de>
+
+	* split.tcl: Speed improvement by using [regexp -start] instead of
+	repeatedly copying the tail of the string.
+	
 2001-11-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* textutil.n:
