@@ -1,3 +1,7 @@
+2001-11-28  Reinhard Max  <max@suse.de>
+
+	* split.tcl: Speed improvement.
+
 2001-11-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* struct.matrix: Implemented FR #481022.
